--- a/theme.html
+++ b/theme.html
@@ -77,7 +77,7 @@
               price : 30000
         </div>
         <div class="adimage">
-            <img src="adimage.png" alt="" />
+            <img src="Capture.jpg" alt="" />
             <div class="caption">
                 <h3><a href="#">Samsung Galaxy </a></h3>
                 <br>
