--- a/theme.html
+++ b/theme.html
@@ -48,7 +48,7 @@
                 price : 30000
           </div>
           <div class="adimage">
-              <img src="adimg.png" alt="" />
+              <img src="adimg.jpg" alt="" />
               <div class="caption">
                 <h4><a href="#">Samsung Galaxy </a></h4>
                 <a href="#">4gb ram,64gb rom </a>  </div>
@@ -60,7 +60,7 @@
                 price : 30000
           </div>
           <div class="adimage">
-              <img src="adimg.png" alt="" />
+              <img src="adimg.jpg" alt="" />
               <div class="caption">
                 <h4><a href="#">Samsung Galaxy </a></h4>
                 <a href="#">4gb ram,64gb rom </a>    </div>
@@ -73,7 +73,7 @@
               price : 30000
         </div>
         <div class="adimage">
-            <img src="adimg.png" alt="" />
+            <img src="adimg.jpg" alt="" />
             <div class="caption">
               <h4><a href="#">Samsung Galaxy </a></h4>
               <a href="#">4gb ram,64gb rom </a> </div>
@@ -86,7 +86,7 @@
               price : 30000
         </div>
         <div class="adimage">
-            <img src="adimg.png" alt="" />
+            <img src="adimg.jpg" alt="" />
             <div class="caption">
               <h4><a href="#">Samsung Galaxy </a></h4>
               <a href="#">4gb ram,64gb rom </a> </div>
@@ -98,7 +98,7 @@
             price : 30000
       </div>
       <div class="adimage">
-          <img src="adimg.png" alt="" />
+          <img src="adimg.jpg" alt="" />
           <div class="caption">
             <h4><a href="#">Samsung Galaxy </a></h4>
             <a href="#">4gb ram,64gb rom </a>
@@ -110,7 +110,7 @@
             price : 30000
       </div>
       <div class="adimage">
-          <img src="adimg.png" alt="" />
+          <img src="adimg.jpg" alt="" />
           <div class="caption">
               <h4><a href="#">Samsung Galaxy </a></h4>
               <a href="#">4gb ram,64gb rom </a>
