--- a/theme.html
+++ b/theme.html
@@ -242,7 +242,7 @@
 
 
 
-<div class="col-md-12 end-box ">
+<div class=" end-box ">
         &copy; 2020 | &nbsp; All Rights Reserved | &nbsp; www.GetMobile.com | &nbsp; 24x7 support | &nbsp; Email us: waqas123wqs@gmail.com
     </div>
 
